[package]
name = "tracing-prometheus"
description = "A tracing layer for capturing prometheus metrics"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicholastmosher/tracing-prometheus"

[dependencies]
prometheus-client = "0.22.0"
smallstr = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
